--- a/dbagent/Dockerfile
+++ b/dbagent/Dockerfile
@@ -1,6 +1,7 @@
 FROM openjdk:8
-COPY db-agent*.zip /tmp
-RUN unzip -d /opt/appdynamics /tmp/db-agent*.zip
+
+COPY --from=appdynamics-agent-download:latest /dbagent-*.zip /tmp
+RUN unzip -d /opt/appdynamics /tmp/dbagent-*.zip
 COPY entrypoint.sh /opt/appdynamics
 RUN chmod +x /opt/appdynamics/entrypoint.sh
 WORKDIR /opt/appdynamics/
